# EPCC

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.claude/rules/: architecture.md  cross-cutting-standards.md  glossary.md  naming-folders.md  principles.md  re-entry-protocol.md  spec-protocol.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
System Specs/: AUDIT_Round00_ExistingSpecs_v1_0.md  EPCC_BuildArchitecture_Brief_v1_0.md  EPCC_BuildArchitecture_Spec_v1_0.md  EPCC_BuildExecutionPlan_v1_0.md  EPCC_DevSkillsRequired_v1_0.md  EPCC_FolderIndex_v1_0.md  EPCC_LegacyManifest_v1_0.md  EPCC_NamingConvention_v1_0.md  EPCC_VersionLog_v1_0.md
SystemAdmin/: M34_SystemAdminRBAC_Spec_v1_0.md  M34_SystemAdminRBAC_Wireframes_v1_0.html  M34_SystemAdminRBAC_Workflows_v1_0.md
SystemAdmin/Cross-link files/: X8_GlossaryENUMs_v0_1.md  X8_GlossaryENUMs_v0_2.md  X8_GlossaryENUMs_v0_3.md  (+10 more)
ZEPCC_Legacy/: EPCC_Complete_Module_Registry_v1_0.md  EPCC_Context_v1.md  EPCC_Deployment_Tier_Specification_v1_0.md  EPCC_Engineering_Standards_v1_2.md  EPCC_HistoricalDataImport_v1_0.md  EPCC_Standards_Memory_v5_3.md  EPCC_UI_Design_System_v2_0.md  M01_Project_Registry_v2.1.md  M02_Structure_WBS_v2_1.md  M03_Planning_Milestones_v2.3.md  M04_Execution_Capture_v2_2.md  M05_Risk_Change_v2_3.md  M06_Financial_Control_v2_1.md  M07_EVM_Engine_v3_0.md  M08_Gate_Control_v2_1.md  M09_Compliance_v2_1.md  M10_EPCC_Command_v2_2.md  M11_Action_Register_v1_0.md  M15_Handover_Management_v1_0.md  PIOE_Spec_v2_1.md  README.md  epcc_command_center_v2.html
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/src/epcc_api/: __init__.py  main.py
apps/api/src/epcc_api/core/: __init__.py  audit.py  auth.py  config.py  db.py  deps.py
apps/api/src/epcc_api/modules/: __init__.py
apps/api/src/epcc_api/modules/m01_project_registry/: __init__.py
apps/api/src/epcc_api/modules/m02_structure_wbs/: __init__.py
apps/api/src/epcc_api/modules/m03_planning_milestones/: __init__.py
apps/api/src/epcc_api/modules/m04_execution_capture/: __init__.py
apps/api/src/epcc_api/modules/m34_rbac/: __init__.py
apps/api/src/epcc_api/shared/: __init__.py  exceptions.py  reserved_fields.py  tenant.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: test_health.py
infra/: docker-compose.test.yml  docker-compose.yml
scripts/: codegen-api-types.sh  codegen-enums.py
(+76 files in other folders)
