[project]
name = "epcc-api"
version = "0.1.0"
description = "EPCC backend (FastAPI). See System Specs/EPCC_BuildArchitecture_Spec_v1_0.md."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Monish" }]
license = { text = "Proprietary (pilot phase)" }

dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "gunicorn>=21.2.0,<22.0.0",
    "sqlalchemy[asyncio]>=2.0.27,<2.1.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.13.0,<1.14.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "celery>=5.3.0,<5.4.0",
    "redis>=5.0.0,<6.0.0",
    "boto3>=1.34.0,<2.0.0",
    "authlib>=1.3.0,<1.4.0",
    "httpx>=0.27.0,<0.28.0",
    "python-multipart>=0.0.9,<0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-postgresql>=5.0.0,<6.0.0",
    "coverage[toml]>=7.4.0,<8.0.0",
    "ruff>=0.3.0,<0.4.0",
    "mypy>=1.9.0,<2.0.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epcc_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "PT011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "br: Business Rule traceability marker (test_BR_XX_NNN_*).",
    "integration: Integration tests requiring a live Postgres + Redis.",
]

[tool.coverage.run]
source = ["src/epcc_api"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
